<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".Principal.TelaInicial">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:paddingBottom="5dp">

        <TextView
            style="@style/Titulos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:text="@string/vitrine"
            android:textSize="30sp" />

        <android.support.v7.widget.CardView
            android:id="@+id/alterarBuscaDaVitrine"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="10dp"
            app:cardBackgroundColor="@color/colorAccent"
            app:cardCornerRadius="30dp"
            app:elevation="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/configuracoes" />
        </android.support.v7.widget.CardView>
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:nestedScrollingEnabled="true"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                style="@style/Alinhamento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/suas_escolhas"
                android:textColor="@color/corBranca" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerViewFilme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@color/colorPrimaryDark"
                android:orientation="vertical"
                android:paddingBottom="5dp">

                <TextView
                    style="@style/Alinhamento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/voce_pode_gostar"
                    android:textColor="@color/corBranca" />

                <GridView
                    android:id="@+id/gridLayoutFilme"
                    android:layout_width="match_parent"
                    android:layout_height="280dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="5dp"
                    android:columnWidth="90dp"
                    android:nestedScrollingEnabled="true"
                    android:numColumns="auto_fit"
                    android:stretchMode="columnWidth"
                    android:verticalSpacing="6.5dp" />
            </LinearLayout>

            <TextView
                style="@style/Alinhamento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/filmes_menos_populares"
                android:textColor="@color/corBranca" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerViewFilmeNaoPopular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp" />
        </LinearLayout>
    </ScrollView>
    <RelativeLayout
        android:id="@+id/falha"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <ImageView
        android:id="@+id/imagemFalhouMensagem"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/configuracoes"/>
        <TextView
            android:id="@+id/conexaoFalhouMensagem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_below="@id/imagemFalhouMensagem"
            android:text="@string/mensagem_codigo_api"
            android:textColor="@color/corBranca"
            android:textAlignment="center"/>
    </RelativeLayout>


</LinearLayout>
